# the-nature-of-things

./: .gitignore  Cargo.toml  architecture.md  gdd.md  overview.md  readme.md  todo.md
src/: constants.rs  lib.rs  main.rs
src/render/: draw.rs  draw_34.rs  draw_3d.rs  draw_cutefantasy.rs  draw_dreamyland.rs  draw_enhanced.rs  draw_farmrpg.rs  draw_sprites.rs  draw_sunnyside.rs  draw_voxel.rs  mod.rs  ui.rs
src/sim/: actor.rs  blueprint.rs  mod.rs  systems.rs  village_gen.rs  world.rs
src/voxel/: building.rs  gen.rs  mesher.rs  mod.rs  vox.rs  world.rs
tools/: asset_pack_knowledge.md  generate_pack_previews.py  inspect_tileset.py  sunnyside_anim.py  sunnyside_env_anim.py  town_previews_large.py  village_env.py
